* RELEASE 23
- Include AMB editor
- Option to throttle AI's expansion by temporarily applying perfume to settlers each time it founds a city
  - Controlled by two settings named ai_settler_perfume_on_founding(_duration)
- Disallow trespassing setting kicks trespassers out of each player's territory at the start of their turn and after signing peace
- Option to block the galley chaining exploit by preventing units from loading into two different transports on the same turn
  - Option named limit_unit_loading_to_one_transport_per_turn
- Adjustable rebase range as multiple of operational range, setting named rebase_range_multiplier
- Option not to draw capital cities larger than they really are, named do_not_make_capital_cities_appear_larger
- Fix division by zero in AI logic to evaluate proposed alliances
- Fix possible crash when unit performing stack bombard is destroyed
- Prevent airdrops from violating the trespassing restriction
- Fix city screen zooming out for adjacent tiles that aren't actually workable due to maximum work radius
- Fix empty army movement

* RELEASE 22
- Can adjust the size of the area cities can work
  - Setting named city_work_radius, standard radius is 2, can be set 1 - 7
  - work_area_limit option allows the workable areas to be limited based on cities' cultural levels
- Option do_not_unassign_workers_from_polluted_tiles (off by default)
- Fix AI players sometimes spawning nonsensical units when hitting a unit limit
- Pressing the Z key on the city screen toggles the zoom level of the map display

* RELEASE 21
- Allow perfume amounts to be specified as percentages
- Option to limit how many units can share each tile, named limit_units_per_tile
- Adjustable chance for max one HP units to be destroyed by nuclear strikes
  - Controlled by config option chance_for_nukes_to_destroy_max_one_hp_units
- Add limited_railroads_work_like_fast_roads option which does just that