@@ -264,6 +264,10 @@ patch_disease_stopping_tech_flag_bug = false
 patch_division_by_zero_in_ai_alliance_eval = true
 patch_empty_army_movement = true
 
+; At the beginning of each AI player's turn, deletes any units of theirs that are not on a valid tile. This addresses a rare crash that can occur when
+; the unit AI invokes the pathfinder for an off-map unit. I don't know how AI units can end up off the map in the first place.
+delete_off_map_ai_units = true
+
 [=========================]
 [=== ENGINE EXTENSIONS ===]
 [=========================]
